# Cluedo2

./: .gitignore  Ablaufplan.txt  CMakeLists.txt
src/: main.cpp
src/commands/: AssignDoorCommand.cpp  AssignDoorCommand.h  PaintCellCommand.cpp  PaintCellCommand.h
src/controller/: ConfigExporter.cpp  ConfigExporter.h  GridController.cpp  GridController.h  PaintController.cpp  PaintController.h
src/model/: BoardConfig.cpp  BoardConfig.h  CellState.h  DoorConnection.h  GamePiece.cpp  GamePiece.h  GridModel.cpp  GridModel.h  Room.cpp  Room.h
src/view/: BoardView.cpp  BoardView.h  DoorDialog.cpp  DoorDialog.h  GridOverlay.cpp  GridOverlay.h  GridSettingsPanel.cpp  GridSettingsPanel.h  MainWindow.cpp  MainWindow.h  PieceDialog.cpp  PieceDialog.h  RoomDialog.cpp  RoomDialog.h  ToolBar.cpp  ToolBar.h
